[gd_scene load_steps=11 format=3 uid="uid://d2pjiwjskef5o"]

[ext_resource type="Script" uid="uid://ghiew1c82y11" path="res://Scripts/menu_scripts/game_join_menu.gd" id="1_ctu8x"]
[ext_resource type="PackedScene" uid="uid://c0id1c01yo1ck" path="res://Scenes/Menus/menutemplate.tscn" id="1_yocke"]
[ext_resource type="FontFile" uid="uid://c1852jjypyisc" path="res://Assets/The Centurion.otf" id="2_nb33g"]
[ext_resource type="Shader" uid="uid://4bsp6edg2ace" path="res://Assets/Shaders/pixelate.gdshader" id="3_nvum6"]
[ext_resource type="ButtonGroup" uid="uid://dy41ywmmtdylm" path="res://Scripts/menu_scripts/buttons/game_join_buttons.tres" id="4_tw4g0"]
[ext_resource type="Script" uid="uid://ctqiw56hledk4" path="res://Scripts/menu_scripts/buttons/select_parrent_check.gd" id="5_4q0dx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3lv6u"]
shader = ExtResource("3_nvum6")
shader_parameter/amount = 300

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_weg7y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxkfk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_miofc"]
shader = ExtResource("3_nvum6")
shader_parameter/amount = 350

[node name="GameJoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctu8x")

[node name="MenuTemplate" parent="." instance=ExtResource("1_yocke")]
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuTemplate"]
material = SubResource("ShaderMaterial_3lv6u")
layout_mode = 0
offset_left = 432.0
offset_top = 528.0
offset_right = 696.0
offset_bottom = 571.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MenuTemplate/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_weg7y")
theme_override_styles/normal = SubResource("StyleBoxEmpty_weg7y")
text = "Back
"

[node name="Control" type="Control" parent="MenuTemplate/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConquerButton" type="Button" parent="MenuTemplate/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pxkfk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pxkfk")
text = "Conquer ->"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuTemplate"]
material = SubResource("ShaderMaterial_miofc")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -169.0
offset_right = 80.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Local" type="CheckBox" parent="MenuTemplate/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 35
button_group = ExtResource("4_tw4g0")
text = "Local Game"

[node name="Join" type="CheckBox" parent="MenuTemplate/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 35
button_group = ExtResource("4_tw4g0")
text = "Join Game"

[node name="JoinName" type="TextEdit" parent="MenuTemplate/VBoxContainer/Join"]
layout_mode = 2
anchor_top = -0.318
anchor_bottom = -0.318
offset_top = 82.942
offset_right = 179.0
offset_bottom = 112.942
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 12
placeholder_text = "Game to Join?"
script = ExtResource("5_4q0dx")

[node name="Control" type="Control" parent="MenuTemplate/VBoxContainer"]
layout_mode = 2

[node name="Host" type="CheckBox" parent="MenuTemplate/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 35
button_group = ExtResource("4_tw4g0")
text = "Host Game"

[node name="HostName" type="TextEdit" parent="MenuTemplate/VBoxContainer/Host"]
layout_mode = 2
offset_top = 64.0
offset_right = 177.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("2_nb33g")
theme_override_font_sizes/font_size = 12
placeholder_text = "Name your Game"
script = ExtResource("5_4q0dx")

[connection signal="pressed" from="MenuTemplate/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuTemplate/HBoxContainer/ConquerButton" to="." method="_on_conquer_button_pressed"]
[connection signal="button_down" from="MenuTemplate/VBoxContainer/Local" to="." method="_on_local_button_down"]
[connection signal="button_down" from="MenuTemplate/VBoxContainer/Join" to="." method="_on_join_button_down"]
[connection signal="pressed" from="MenuTemplate/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="button_down" from="MenuTemplate/VBoxContainer/Host" to="." method="_on_host_button_down"]
[connection signal="pressed" from="MenuTemplate/VBoxContainer/Host" to="." method="_on_host_pressed"]
